# netcoevolve

./: .gitignore  Cargo.toml  README.md  col0_start_end.csv  col0_start_end.xlsx
output-1500-0.65-3.0/: simulation-20260102-130143.csv  simulation-20260102-130144.csv  simulation-20260102-130145.csv  simulation-20260102-130146.csv  simulation-20260102-130147.csv  simulation-20260102-130149.csv  simulation-20260102-130159.csv  simulation-20260102-130202.csv  simulation-20260102-130203.csv  simulation-20260102-130213.csv  simulation-20260102-130217.csv  simulation-20260102-130222.csv  simulation-20260102-130224.csv  simulation-20260102-130225.csv  simulation-20260102-130229.csv  simulation-20260102-130230.csv  simulation-20260102-130234.csv  simulation-20260102-130240.csv  simulation-20260102-130251.csv  simulation-20260102-130252.csv  simulation-20260102-130255.csv  simulation-20260102-130257.csv  simulation-20260102-130258.csv  simulation-20260102-130304.csv  simulation-20260102-130308.csv  simulation-20260102-130312.csv  simulation-20260102-130314.csv  simulation-20260102-130315.csv  simulation-20260102-130323.csv  simulation-20260102-130335.csv  simulation-20260102-130336.csv  simulation-20260102-130338.csv  simulation-20260102-130339.csv  simulation-20260102-130340.csv  simulation-20260102-130349.csv  simulation-20260102-130350.csv  simulation-20260102-130355.csv  simulation-20260102-130400.csv  simulation-20260102-130401.csv  simulation-20260102-130408.csv  (+460 more)
output-1500-0.80-3.0/: simulation-20260102-134502.csv  simulation-20260102-134503.csv  (+496 more)
scripts/: analyse.py  (+4 more)
(+508 files in other folders)
